2008-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Design.Generic.mdp: New. Add MD project file.

2008-09-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodWithUnusedGenericTypeRule.cs: New. This rule warns 
	if some generic parameters types are not being used by the method 
	parameters.
	* Makefile.am: Add new files to the build.

2008-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* UseGenericEventHandlerRule.cs: New. Rule to promote the use of
	generic based EventHandler<TEventArg> instead of using delegates 
	(like fx 1.x required).
	* Makefile.am: Add new files to the build.

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementGenericCollectionInterfacesRule.cs: Moved from Design.
	Added FxCopCompatibility attribute.
	* Makefile.am: New. Build file.