@@ -1,3 +1,10 @@
+2008-09-14  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidMethodWithUnusedGenericTypeRule.cs,
+	ImplementGenericCollectionInterfacesRule.cs,
+	UseGenericEventHandlerRule.cs: Add XML documentation for the
+	rules (then converted into media wiki format).
+
 2008-09-10  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Gendarme.Rules.Design.Generic.mdp: New. Add MD project file.
